--- a/service.html
+++ b/service.html
@@ -22,7 +22,7 @@
                     <li class="header-menu__item active"><a href="service.html">SERVICE</a></li>
                     <li class="header-menu__item"><a href="">WORK</a></li>
                     <li class="header-menu__item"><a href="">BLOG</a></li>
-                    <li class="header-menu__item"><a href="">CONTACT</a></li>
+                    <li class="header-menu__item"><a href="contacts.html">CONTACT</a></li>
                 </ul>
                 <div class="header-btns">
                     <a href="" class="header-btns__btn">
